--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,7 @@
 {
     "hosting": {
-        "predeploy": "npm run build:firebase",
-        "public": "build",
+        "predeploy": "npm run build",
+        "public": "server/build",
         "ignore": [
             "firebase.json",
             "**/.*"
@@ -56,6 +56,6 @@
         ]
     },
     "functions": {
-        "predeploy": "npm run build:firebase && npm --prefix functions run build"
+        "predeploy": "npm run build && npm --prefix functions run build"
     }
 }
