--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "license": "BSD-3-Clause",
   "repository": "Polymer/pwa-starter-kit",
   "scripts": {
-    "start": "polymer serve --proxy-path /api --proxy-target http://localhost:3000/api",
-    "build": "npm run build:prpl-server && npm run build:static",
+    "start": "polymer serve --proxy-path /api --proxy-target http://localhost:5000/api",
+    "build": "npm run build:prpl-server && npm run build:firebase && npm run build:static",
     "build:prpl-server": "polymer build --auto-base-path && gulp prpl-server",
     "build:static": "polymer build",
-    "build:firebase": "polymer build --auto-base-path && gulp firebase",
+    "build:firebase": "gulp firebase",
     "serve:prpl-server": "prpl-server --root server/build",
     "serve:static": "polymer serve --port 5000 build/es5-bundled",
     "test": "npm run test:unit && npm run test:integration",
@@ -40,8 +40,8 @@
     "gulp-replace": "^1.0.0",
     "mocha": "^5.1.0",
     "pixelmatch": "^4.0.2",
-    "polymer-cli": "^1.7.1",
-    "polyserve": "^0.27.0",
+    "polymer-cli": "^1.7.7",
+    "polyserve": "^0.27.12",
     "prpl-server": "^1.1.0",
     "puppeteer": "^1.4.0",
     "wct-browser-legacy": "^1.0.1"
