--- a/functions/package.json
+++ b/functions/package.json
@@ -13,32 +13,32 @@
         "alexa-app": "^4.2.2",
         "express": "^4.16.3",
         "express-graphql": "^0.6.12",
-        "firebase-admin": "~5.12.1",
-        "firebase-functions": "^1.0.3",
+        "firebase-admin": "^5.13.1",
+        "firebase-functions": "^2.0.2",
         "formidable": "^1.2.1",
         "graphql": "^0.11.7",
         "graphql-date": "^1.0.3",
         "graphql-relay": "^0.5.5",
-        "graphql-sequelize": "^8.1.3",
+        "graphql-sequelize": "^8.3.1",
         "pg": "^7.4.3",
         "prpl-server": "^1.2.0",
         "rendertron-middleware": "^0.1.2",
-        "sequelize": "^4.37.10",
-        "uuid": "^3.2.1",
-        "web-push": "^3.3.1",
-        "xregexp": "^4.1.1"
+        "sequelize": "^4.38.0",
+        "uuid": "^3.3.2",
+        "web-push": "^3.3.2",
+        "xregexp": "^4.2.0"
     },
     "private": true,
     "devDependencies": {
         "@types/express": "^4.16.0",
         "@types/express-graphql": "^0.6.1",
         "@types/formidable": "^1.0.31",
-        "@types/graphql": "^0.13.1",
+        "@types/graphql": "^0.13.3",
         "@types/graphql-date": "^1.0.2",
-        "@types/sequelize": "^4.27.20",
+        "@types/sequelize": "^4.27.24",
         "@types/uuid": "^3.4.3",
         "@types/xregexp": "^3.0.29",
-        "tslint": "^5.10.0",
-        "typescript": "^2.9.1"
+        "tslint": "^5.11.0",
+        "typescript": "^2.9.2"
     }
 }
