--- a/functions/package.json
+++ b/functions/package.json
@@ -10,12 +10,14 @@
         "logs": "firebase functions:log"
     },
     "dependencies": {
+        "actions-on-google": "^2.2.0",
         "alexa-app": "^4.2.2",
+        "dialogflow": "^0.5.0",
+        "dialogflow-fulfillment": "^0.4.1",
         "express": "^4.16.3",
         "express-graphql": "^0.6.12",
-        "firebase-admin": "^5.13.1",
-        "firebase-functions": "^2.0.2",
-        "formidable": "^1.2.1",
+        "firebase-admin": "~5.12.1",
+        "firebase-functions": "^1.0.3",
         "graphql": "^0.11.7",
         "graphql-date": "^1.0.3",
         "graphql-relay": "^0.5.5",
@@ -30,6 +32,7 @@
     },
     "private": true,
     "devDependencies": {
+        "@types/actions-on-google": "^1.10.0",
         "@types/express": "^4.16.0",
         "@types/express-graphql": "^0.6.1",
         "@types/formidable": "^1.0.31",
