update to firebase cloud messaging

--- a/firebase.json
+++ b/firebase.json
@@ -60,6 +60,19 @@
                         "value": "no-cache"
                     }
                 ]
+            },
+            {
+                "source" : "**/firebase-messaging-sw.js",
+                "headers" : [
+                    {
+                        "key" : "Service-Worker-Allowed",
+                        "value" : "/"
+                    },
+                    {
+                        "key": "Cache-Control",
+                        "value": "no-cache"
+                    }
+                ]
             }
         ]
     },
