--- a/functions/package.json
+++ b/functions/package.json
@@ -10,14 +10,15 @@
         "logs": "firebase functions:log"
     },
     "dependencies": {
+        "@types/request": "^2.47.1",
         "actions-on-google": "^2.2.0",
         "alexa-app": "^4.2.2",
         "dialogflow": "^0.5.0",
         "dialogflow-fulfillment": "^0.4.1",
         "express": "^4.16.3",
         "express-graphql": "^0.6.12",
-        "firebase-admin": "~5.12.1",
-        "firebase-functions": "^1.0.3",
+        "firebase-admin": "^5.12.1",
+        "firebase-functions": "^1.1.0",
         "graphql": "^0.11.7",
         "graphql-date": "^1.0.3",
         "graphql-relay": "^0.5.5",
@@ -25,6 +26,8 @@
         "pg": "^7.4.3",
         "prpl-server": "^1.2.0",
         "rendertron-middleware": "^0.1.2",
+        "request": "^2.87.0",
+        "request-promise-native": "^1.0.5",
         "sequelize": "^4.38.0",
         "uuid": "^3.3.2",
         "web-push": "^3.3.2",
@@ -38,6 +41,7 @@
         "@types/formidable": "^1.0.31",
         "@types/graphql": "^0.13.3",
         "@types/graphql-date": "^1.0.2",
+        "@types/request-promise-native": "^1.0.15",
         "@types/sequelize": "^4.27.24",
         "@types/uuid": "^3.4.3",
         "@types/xregexp": "^3.0.29",
