--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "npm run build:prpl-server && npm run build:firebase && npm run build:static",
     "build:prpl-server": "polymer build --auto-base-path && gulp prpl-server",
     "build:static": "polymer build",
-    "build:firebase": "gulp firebase",
+    "build:firebase": "tsc --project functions && gulp firebase",
     "serve:prpl-server": "prpl-server --root server/build",
     "serve:static": "polymer serve --port 5000 build/es5-bundled",
     "test": "npm run test:unit && npm run test:integration",
