rewrite to use the firebase firestore instead of postgresql

--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   "license": "BSD-3-Clause",
   "repository": "Polymer/pwa-starter-kit",
   "scripts": {
+    "deploy": "npm run build && firebase deploy",
     "start": "polymer serve --proxy-path /api --proxy-target http://localhost:5000/api",
-    "build": "npm run build:prpl-server && npm run build:firebase && npm run build:static",
+    "build": "npm run build:prpl-server && npm run build:firebase",
     "build:prpl-server": "polymer build --auto-base-path && gulp prpl-server",
     "build:static": "polymer build",
     "build:firebase": "tsc --project functions && gulp firebase",
-    "serve:prpl-server": "prpl-server --root server/build",
+    "serve:prpl-server": "firebase serve --only hosting",
     "serve:static": "polymer serve --port 5000 build/es5-bundled",
     "test": "npm run test:unit && npm run test:integration",
     "test:integration": "mocha test/integration --timeout=10000",
@@ -25,7 +26,7 @@
     "@polymer/app-layout": "^3.0.0-pre.21",
     "@polymer/lit-element": "^0.5.2",
     "@webcomponents/webcomponentsjs": "^2.0.4",
-    "formidable": "^1.2.1",
+    "firebase": "^5.2.0",
     "pwa-helpers": "^0.8.3",
     "redux": "^3.7.2",
     "redux-thunk": "^2.3.0",
