--- a/functions/package.json
+++ b/functions/package.json
@@ -10,6 +10,7 @@
         "logs": "firebase functions:log"
     },
     "dependencies": {
+        "@google-cloud/debug-agent": "^3.0.0",
         "@types/request": "^2.47.1",
         "actions-on-google": "^2.3.0",
         "alexa-app": "^4.2.2",
