--- a/functions/package.json
+++ b/functions/package.json
@@ -2,7 +2,7 @@
     "name": "functions",
     "description": "Cloud Functions for Firebase",
     "scripts": {
-        "build": "./node_modules/.bin/tsc",
+        "build": "./node_modules/.bin/tsc --sourceMap",
         "serve": "firebase serve --only functions",
         "shell": "firebase functions:shell",
         "start": "npm run shell",
