update firebase-functions library

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "polyserve": "^0.27.12",
     "prpl-server": "^1.2.0",
     "puppeteer": "^1.11.0",
+    "typescript": "^3.2.1",
     "wct-mocha": "^1.0.0"
   }
 }
