--- a/functions/package.json
+++ b/functions/package.json
@@ -1,6 +1,7 @@
 {
     "name": "functions",
     "description": "Cloud Functions for Firebase",
+    "engines": {"node": "8"},
     "scripts": {
         "build": "tsc --sourceMap",
         "serve": "firebase serve --only functions",
