--- a/functions/package.json
+++ b/functions/package.json
@@ -1,7 +1,9 @@
 {
     "name": "functions",
     "description": "Cloud Functions for Firebase",
-    "engines": {"node": "8"},
+    "engines": {
+        "node": "8"
+    },
     "scripts": {
         "build": "tsc --sourceMap",
         "serve": "firebase serve --only functions",
@@ -17,8 +19,9 @@
         "dialogflow": "^0.5.0",
         "dialogflow-fulfillment": "^0.4.1",
         "express": "^4.16.3",
-        "firebase-admin": "^5.13.1",
-        "firebase-functions": "^1.1.0",
+        "firebase-admin": "^7.0.0",
+        "firebase-functions": "^2.2.0",
+        "nstall": "^0.2.0",
         "prpl-server": "^1.2.0",
         "rendertron-middleware": "^0.1.2",
         "uuid": "^3.3.2",
