--- a/functions/package.json
+++ b/functions/package.json
@@ -1,6 +1,7 @@
 {
     "name": "functions",
     "description": "Cloud Functions for Firebase",
+    "license": "BSD-3-Clause",
     "engines": {
         "node": "8"
     },
@@ -34,6 +35,6 @@
         "@types/uuid": "^3.4.3",
         "@types/xregexp": "^3.0.29",
         "tslint": "^5.11.0",
-        "typescript": "^2.9.2"
+        "typescript": "^3.3.3"
     }
 }
