--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "axe-core": "^3.0.0",
     "chai": "^4.1.2",
     "del": "^3.0.0",
+    "firebase-tools": "^6.3.1",
     "gulp": "^4.0.0",
     "gulp-rename": "^1.3.0",
     "gulp-replace": "^1.0.0",
@@ -48,7 +49,7 @@
     "polyserve": "^0.27.0",
     "prpl-server": "^1.4.0",
     "puppeteer": "^1.5.0",
-    "typescript": "^3.1.3",
+    "typescript": "^3.3.3",
     "wct-mocha": "^1.0.0"
   }
 }
