--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   "license": "BSD-3-Clause",
   "repository": "Polymer/pwa-starter-kit",
   "scripts": {
-    "prune:production": "npm prune --production && npm --prefix functions prune --production",
+    "prune:production": "npm prune --production && cd functions && npm prune --production",
     "deploy": "npm install && npm run build && npm run prune:production && firebase deploy",
-    "install": "npm --prefix functions install",
+    "install": "cd functions && npm install",
     "start": "gulp serve",
     "build": "npm run build:prpl-server && npm run build:firebase",
     "build:prpl-server": "tsc && polymer build --auto-base-path && gulp prpl-server",
-    "build:firebase": "gulp firebase && npm --prefix functions run build",
+    "build:firebase": "gulp firebase && cd functions && npm run build",
     "build:static": "tsc && polymer build",
     "serve": "prpl-server --root server/build",
     "serve:static": "polymer serve --port 5000 build/es5-bundled",
@@ -24,32 +24,32 @@
     "test:regenerate_screenshots": "tsc && mocha test/integration/screenshots-baseline/regenerate.js --timeout=15000"
   },
   "dependencies": {
-    "@polymer/app-layout": "^3.0.0",
-    "@polymer/polymer": "^3.1.0",
-    "@webcomponents/webcomponentsjs": "^2.2.4",
-    "firebase": "^5.8.2",
-    "lit-element": "^2.0.1",
-    "pwa-helpers": "^0.9.0",
-    "redux": "^4.0.0",
+    "@polymer/app-layout": "^3.0.2",
+    "@polymer/polymer": "^3.2.0",
+    "@webcomponents/webcomponentsjs": "^2.2.10",
+    "firebase": "^6.1.0",
+    "lit-element": "^2.1.0",
+    "pwa-helpers": "^0.9.1",
+    "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0"
   },
   "devDependencies": {
     "@polymer/test-fixture": "^4.0.2",
     "@types/core-js": "^2.5.0",
-    "axe-core": "^3.0.0",
+    "axe-core": "^3.2.2",
     "chai": "^4.1.2",
     "del": "^3.0.0",
-    "gulp": "^4.0.0",
+    "gulp": "^4.0.2",
     "gulp-rename": "^1.3.0",
     "gulp-replace": "^1.0.0",
     "mocha": "^5.2.0",
     "pixelmatch": "^4.0.2",
-    "polymer-cli": "^1.9.8",
+    "polymer-cli": "^1.9.9",
     "polyserve": "^0.27.0",
     "prpl-server": "^1.4.0",
-    "puppeteer": "^1.14.0",
-    "typescript": "^3.3.3",
+    "puppeteer": "^1.17.0",
+    "typescript": "^3.5.1",
     "wct-mocha": "^1.0.0"
   }
 }
