--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "axe-core": "^3.2.2",
     "chai": "^4.1.2",
     "del": "^3.0.0",
+    "firebase-tools": "^6.10.0",
     "gulp": "^4.0.2",
     "gulp-rename": "^1.3.0",
     "gulp-replace": "^1.0.0",
