Many many many fine changes....
Lots of work went into bringing this commit into the world. So much that
I can't document it all, but suffice to say that many electrons were
slightly inconvenienced.

Signed-off-by: Daniel Llewellyn <daniel@bowlhat.net>

--- a/firebase.json
+++ b/firebase.json
@@ -1,4 +1,11 @@
 {
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
+  },
+  "emulators": {
+    "firestore": {}
+  },
   "functions": {
     "predeploy": [
       "npm install",
@@ -38,6 +45,10 @@
       {
         "source": "/api/push/unregister",
         "function": "UnregisterFromPush"
+      },
+      {
+        "source": "/api/internal/__populatedb",
+        "function": "PopulateEmulatorDb"
       },
       {
         "source": "**",
