--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "description": "TODO",
   "version": "0.0.1",
   "engines": {
-    "node": "8"
+    "node": "10"
   },
   "scripts": {
     "dev": "sapper dev",
     "build": "sapper build --legacy",
     "export": "sapper export --legacy",
     "start": "node __sapper__/build",
+    "firebase:dev": "yarn dev & env IIOY_DEV=true yarn firebase emulators:start",
+    "deploy": "yarn firebase deploy",
     "cy:run": "cypress run",
     "cy:open": "cypress open",
     "test": "run-p --race dev cy:run"
@@ -17,25 +19,26 @@
   "dependencies": {
     "actions-on-google": "^2.12.0",
     "alexa-app": "^4.2.3",
-    "compression": "^1.7.1",
-    "dialogflow": "^0.10.3",
+    "compression": "^1.7.4",
+    "dialogflow": "^0.12.0",
     "dialogflow-fulfillment": "^0.6.1",
     "express": "^4.17.1",
-    "firebase": "^6.6.0",
-    "firebase-admin": "^8.5.0",
+    "firebase": "^7.0.0",
+    "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.2.0",
-    "sirv": "^0.4.0",
+    "sirv": "^0.4.2",
     "uuid": "^3.3.3",
     "xregexp": "^4.2.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
+    "@babel/core": "^7.6.2",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/runtime": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/preset-env": "^7.6.2",
+    "@babel/runtime": "^7.6.2",
+    "firebase-tools": "^7.4.0",
     "npm-run-all": "^4.1.5",
-    "rollup": "^1.12.0",
+    "rollup": "^1.22.0",
     "rollup-plugin-babel": "^4.0.2",
     "rollup-plugin-commonjs": "^10.0.0",
     "rollup-plugin-json": "^4.0.0",
@@ -45,7 +48,7 @@
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-svelte": "^5.0.1",
     "rollup-plugin-terser": "^4.0.4",
-    "sapper": "^0.27.0",
-    "svelte": "^3.0.0"
+    "sapper": "^0.27.9",
+    "svelte": "^3.12.1"
   }
 }
