--- a/.github/workflows/build-functions.yml
+++ b/.github/workflows/build-functions.yml
@@ -6,7 +6,7 @@ on:
     paths:
       - .firebaserc
       - firebase.json
-      - index-prod.js
+      - index.js
       - package*.json
       - rollup.config.js
       - src/**
@@ -18,6 +18,9 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@master
+      - uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
       - name: Install Dependencies
         run: npm install
       - name: Build
@@ -34,6 +37,9 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@master
+      - uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
       - name: Download Artifact
         uses: actions/download-artifact@master
         with:
