--- a/.github/workflows/build-hosting.yml
+++ b/.github/workflows/build-hosting.yml
@@ -15,6 +15,9 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@master
+      - uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
