--- a/.github/workflows/build-functions.yml
+++ b/.github/workflows/build-functions.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Build
         run: npm run build
       - name: Archive Production Artifact
-        uses: actions/upload-artifact@master
+        uses: actions/upload-artifact@v2.1.0
         with:
           name: dist
           path: __sapper__/build
@@ -41,7 +41,7 @@ jobs:
         with:
           node-version: '12.x'
       - name: Download Artifact
-        uses: actions/download-artifact@master
+        uses: actions/download-artifact@v2.0.1
         with:
           name: dist
           path: __sapper__/build
