--- a/.github/workflows/build-functions.yml
+++ b/.github/workflows/build-functions.yml
@@ -4,6 +4,7 @@ on:
     branches:
       - master
     paths:
+      - .github/workflows/build-functions.yml
       - .firebaserc
       - firebase.json
       - index.js
