--- a/package.json
+++ b/package.json
@@ -24,14 +24,11 @@
   "dependencies": {
     "actions-on-google": "^2.13.0",
     "alexa-app": "^4.2.3",
-    "compression": "^1.7.4",
     "dialogflow": "^4.0.3",
     "dialogflow-fulfillment": "^0.6.1",
-    "express": "^4.17.1",
     "firebase": "^8.2.7",
     "firebase-admin": "^9.5.0",
     "firebase-functions": "^3.13.1",
-    "sirv": "^0.4.6",
     "uuid": "^3.4.0",
     "xregexp": "^4.4.1"
   },
@@ -41,17 +38,20 @@
     "@babel/plugin-transform-runtime": "^7.12.15",
     "@babel/preset-env": "^7.12.16",
     "@babel/runtime": "^7.12.13",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^11.2.0",
+    "@rollup/plugin-replace": "^2.3.4",
+    "compression": "^1.7.4",
+    "express": "^4.17.1",
     "firebase-tools": "^9.3.0",
     "npm-run-all": "^4.1.5",
     "rollup": "^2.39.0",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "sapper": "^0.29.1",
+    "sirv": "^0.4.6",
     "svelte": "^3.32.3"
   }
 }
