Use forked firebase deploy action
Signed-off-by: Dani Llewellyn <diddledani@ubuntu.com>

--- a/.github/workflows/build-functions.yml
+++ b/.github/workflows/build-functions.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Build
         run: npm run build
       - name: Deploy to Firebase
-        uses: w9jds/firebase-action@v1.5.0
+        uses: diddledan/firebase-action@master
         with:
           args: deploy --only functions
         env:
