--- a/.github/workflows/build-hosting.yml
+++ b/.github/workflows/build-hosting.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           node-version: '16.x'
       - name: Deploy to Firebase
-        uses: w9jds/firebase-action@v1.5.0
+        uses: diddledan/firebase-action@master
         with:
           args: deploy --only hosting
         env:
