--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "alexa-app": "^4.2.3",
     "firebase-admin": "^9.11.1",
     "firebase-functions": "^3.15.5",
-    "uuid": "^8.3.2",
-    "xregexp": "^5.1.0"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.15.4",
