--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   "dependencies": {
     "alexa-app": "^4.2.3",
     "firebase-admin": "^10.0.1",
-    "firebase-functions": "^3.16.0",
-    "uuid": "^8.3.2"
+    "firebase-functions": "^3.24.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.4",
@@ -40,7 +40,7 @@
     "@rollup/plugin-replace": "^2.4.2",
     "compression": "^1.7.4",
     "express": "^4.17.1",
-    "firebase-tools": "^10.1.0",
+    "firebase-tools": "^11.11.0",
     "npm-run-all": "^4.1.5",
     "rollup": "^2.56.3",
     "rollup-plugin-svelte": "^7.1.0",
@@ -48,5 +48,8 @@
     "sapper": "^0.29.2",
     "sirv": "^1.0.17",
     "svelte": "^3.49.0"
+  },
+  "resolutions": {
+    "vm2": "^3.9.11"
   }
 }
